--- a/ProductLandingPage/style.css
+++ b/ProductLandingPage/style.css
@@ -1,4 +1,3 @@
-
 * {
   box-sizing: border-box;
   margin: 0px;
@@ -20,42 +19,40 @@ header {
   font-size: 1.6rem;
   position: fixed;
   top: 0;
+  left: 0;
   display: flex;
-  max-width: 100vw;
-  width: 100vw;
-  
-  
+  width: 100%;
   min-height: 11rem;
   background: linear-gradient(Gainsboro 0px, Gainsboro 10rem, transparent 11rem);
 }
 
 #header-div {
   background-color: white;
+  position: sticky;
+  top: 1rem;
   width: 100%;
   margin: 1rem;
   margin-bottom: 0px;
   max-height: 8rem;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   border-radius: 10px;
 }
 
 #img-div {
-  display: flex;
   height: 5rem;
-  max-width: 30%;
+  width: 24rem;
   margin-left: 1.5rem;
-  justify-content: left;
+  margin-right: 1.5rem;
 }
 
 img {
-  
+  width: 24rem;
 }
 
 #nav-bar {
   display: flex;
-  justify-content: right;
-  width: 100%;
 }
 
 ul {
@@ -77,6 +74,7 @@ li {
   color: rgb(70, 70, 70);
   border-radius: 0.5rem;
   padding: 1rem 2rem 1rem 2rem;
+  
 }
 
 .nav-link:hover {
@@ -95,11 +93,11 @@ li {
 }
 
 section {
-  margin: 1rem;
   padding: 1rem;
   width: 90%;
   margin: auto;
 }
+
 
 #video {
   display: block;
@@ -164,22 +162,23 @@ input {
   box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
 }
 
-button {
+input[type=submit] {
   background-color: orange;
   color: rgb(70, 70, 70);
   border-style: none;
   border-radius: 0.5rem;
   padding: 1rem;
-  width: 10rem;
-  margin: 2rem;
+  width: 20rem;
+  margin: auto;
+  margin-top: 1rem;
   font-weight: bold;
 }
 
-button:hover {
+input[type=submit]:hover {
   background-color: gold ;
 }
 
-button:active {
+input[type=submit]:active {
   background-color: coral;
 }
 
@@ -189,39 +188,21 @@ button:active {
   }
 
   header {
-    font-family: 'Segoe UI', Verdana;
-    font-size: 1.6rem;
-    position: fixed;
-    top: 0;
-    width: 100%;
+    height: 22.5rem;
     display: flex;
     flex-direction: column;
-    background: linear-gradient(Gainsboro 0px, Gainsboro 10rem, transparent 11rem);
+    background: linear-gradient(Gainsboro 0px, Gainsboro 25.5rem, transparent 26.5rem);
   }
   
   #header-div {
-    background-color: white;
-    width: 100%;
-    display: flex;
     flex-direction: column;
     align-items: center;
     margin: 1rem;
-    margin-bottom: 0px;
-    max-height: 8rem;
-    border-radius: 10px;
-  }
-  
-  #img-div {
-    display: flex;
-    height: 5rem;
-    max-width: 30%;
-    margin-left: 1.5rem;
-    margin-top: 2rem;
-    justify-content: left;
-  }
-  
-  img {
-    
+    width: auto;
+    justify-content: flex-start;
+    /* margin-bottom: 2rem; */
+    height: 100%;
+    max-height: none;
   }
 
   #nav-bar {
@@ -229,7 +210,6 @@ button:active {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    width: 100%;
   }
   
   ul {
@@ -237,7 +217,24 @@ button:active {
     flex-direction: column;
     justify-content: center;
   }
+  
   li {
-    margin: 1rem;
+    padding: 0.6rem 0rem 0.05rem 0rem;
   }
+
+  #main {
+    margin-top: 22.5rem;
+  }
+
+  .nav-link {
+    background-color: orange;
+    font-weight: bold;
+    display: inline-block;
+    width: 30rem;
+    
+    color: rgb(70, 70, 70);
+    border-radius: 0.5rem;
+    padding: 0.4rem 1rem 0.4rem 1rem;
+  }
+
 }
