--- a/PersonalPortfolioWebpage/style.css
+++ b/PersonalPortfolioWebpage/style.css
@@ -6,10 +6,11 @@
 
 html {
   font-size: 10px;
+  scroll-behavior: smooth;
 }
 
 body {
-  font-family: 'Segoe UI', Verdana;
+  font-family: "Trebuchet MS",'Poppins', sans-serif;
   font-size: 1.6rem;
   width: 100%;
 }
@@ -17,11 +18,13 @@ body {
 #navbar {
   position: fixed;
   width: 100%;
-  height: 6rem;
-  background-color: forestgreen;
+  height: 8rem;
+  background-color: rgb(237, 174, 73);
   display: flex;
   justify-content: right;
   align-items: center;
+  box-shadow: 0px 2px 5px rgb(12, 9, 16);
+  text-shadow: 0px 0px 1px rgb(12, 9, 16);
 }
 
 nav ul {
@@ -35,9 +38,151 @@ li {
 
 li a {
   display: block;
-  padding-left: 2rem;
-  padding-right: 2rem;
-  line-height: 6rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  line-height: 8rem;
   text-align: center;
-  background-color: fuchsia;
+  text-decoration: none;
+  color: rgb(12, 9, 16);
+  font-weight: 500;
+  font-size: 2.2rem;
+}
+
+li a:hover {
+  background-color: rgb(194, 202, 232);
+}
+
+#welcome-section {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  background-color: rgb(12, 9, 16); 
+  color: white;
+  justify-content: center;
+  
+}
+
+#welcome-section h1 {
+  font-weight: 300;
+  font-size: 6rem;
+  font-family: "Trebuchet MS";
+}
+
+#welcome-section p {
+  font-size: 4rem;
+  font-weight: lighter;
+  font-style: italic;
+  font-family: "Trebuchet MS";
+  color: rgb(194, 202, 232);
+}
+
+#my-projects {
+  width: 100%;
+  text-align: center;
+  font-family: "Trebuchet MS";
+  margin-top: 10rem;
+  font-size: 3rem;
+  font-weight: lighter;
+  text-shadow: 1px 2px 1px rgb(194, 202, 232);
+}
+
+#projects {
+  background-color: rgb(91, 123, 122);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 4rem 0 4rem 0;
+}
+
+.project-tile {
+  width: 50rem;
+  height: 40rem;
+  background-color: rgb(194, 202, 232);
+  margin: 6rem;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0px 0px 10px rgb(12, 9, 16);
+}
+
+.project-tile img {
+  object-fit: cover;
+  object-position: left;
+  object-position: top;
+  border-radius: 10px;
+  margin-bottom: 0.6rem;
+  padding-bottom:1rem;
+  width: 50rem;
+  height: 34rem;
+}
+
+.project-tile a {
+  text-decoration: none;
+  display: block;
+  font-size: 2rem;
+  font-family: "Trebuchet MS";
+  color: rgb(237, 174, 73);
+  font-weight: 800;
+}
+
+.link {
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 0.2rem;
+  text-shadow: 0px 0px 10px rgb(12, 9, 16);
+}
+
+#contact {
+  background-color: rgb(237, 174, 73);
+  box-shadow: 0px -2px 5px rgb(12, 9, 16);
+  height: 8rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;  
+}
+
+#contact h2 {
+  font-size: 3rem;
+  margin-right: 5rem;
+  text-shadow: 1px 1px 1px rgb(194, 202, 232);
+}
+
+#contact a {
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  padding-right: 3rem;
+  color: rgb(12, 9, 16);
+  font-weight: 500;
+  font-size: 2.2rem;
+  text-shadow: 1px 1px 1px rgb(194, 202, 232);
+}
+
+#contact img {
+  margin-right: 0.6rem;
+  height: 3rem;
+  width: 3rem;
+  filter: drop-shadow(1px 1px 1px rgb(194, 202, 232));
+}
+
+@media (max-width: 930px) {
+  html {
+    font-size: 8px;
+  }
+  
+  #contact {
+    flex-direction: column;
+    height: auto;
+  }
+
+  #contact h2 {
+    margin: 1rem;
+  }
+
+  #contact a {
+    padding-top: 1rem;
+  }
 }
